k8s/apps/forgejo-runner/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-runner
  labels:
    # dind sidecar requires a privileged container to run job workloads
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
